# project-template

./: .pre-commit-config.yaml  CONTRIBUTING.md.jinja  Makefile  README.md.jinja  copier.yml  ctt.toml  pyproject.toml.jinja  update_all.sh
ctt/insider_only/: README.md
ctt/insider_only/.github/actions/setup/: action.yml
ctt/insider_only/.github/workflows/: ci.yml
ctt/test-pytest/: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
ctt/test-pytest/.github/workflows/: docs.yml
examples/insider_only/: .copier-answers.yml  README.md  custom_extensions.py  pyproject.toml
examples/sample_project/: .copier-answers.yml  README.md  pyproject.toml
template/: CONTRIBUTING.md.jinja  README.md.jinja  pyproject.toml.jinja
template/.github/: pull_request_template.md
template/.github/actions/setup/: action.yml.jinja
template/.github/workflows/: ci.yml.jinja
